<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/layout_setname"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bright_blue"
        android:padding="@dimen/padding"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big_text"
            android:textColor="@color/white"
            android:text="@string/please_name"/>
        <EditText
            android:id="@+id/edit_newname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/white"
            android:background="@null"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big_text"
            android:textColor="@color/white"
            android:text="@string/advice_name"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/next"
            android:onClick="onFinish"
            android:background="@color/dark_blue"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_new_detected"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bright_blue"
        android:padding="@dimen/padding"
        android:gravity="center">
        <TextView
            android:id="@+id/noti_detected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/new_detected"/>
        <Button
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/next"
            android:onClick="onSetName"
            android:background="@color/dark_blue"/>
    </LinearLayout>

</FrameLayout>