<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bright_blue"
    android:padding="@dimen/padding"
    android:gravity="center_horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/big_text"
        android:textColor="@color/white"
        android:text="@string/range_temperature"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <EditText
            android:id="@+id/set_temp_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big_text"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:background="@null"
            android:inputType="number"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big_text"
            android:textColor="@color/white"
            android:text=" TO "
            android:gravity="center_horizontal"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/set_temp_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big_text"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:background="@null"
            android:inputType="number"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/big_text"
        android:textColor="@color/white"
        android:text="@string/range_humidity"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <EditText
            android:id="@+id/set_hum_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big_text"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:background="@null"
            android:inputType="number"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big_text"
            android:textColor="@color/white"
            android:text=" TO "
            android:layout_weight="1"
            android:gravity="center_horizontal"/>
        <EditText
            android:id="@+id/set_hum_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big_text"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:background="@null"
            android:inputType="number"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/big_text"
        android:textColor="@color/white"
        android:text="@string/confirm"
        android:onClick="onConfirm"
        android:background="@color/dark_blue"
        android:padding="10dp"/>
</LinearLayout>